# OCRIntegrator

./: .gitignore  README.md  README.zh.md  main.py  pyproject.toml
app/: common_interface.py  constants.py
app/adapter/: deepdoc_adapter.py
app/app/: common_interface.py
app/app/adapter/: deepdoc_adapter.py
app/app/deepdoc/: tensorrt_engine.py
app/app/deepdoc/parser/: image_parser.py  pdf_parser.py
app/app/deepdoc/rag/app/: book.py  one.py  qa.py
app/app/deepdoc/rag/nlp/: term_weight.py
app/app/deepdoc/vision/: __init__.py  ocr.py  recognizer.py  seeit.py  t_recognizer.py  table_structure_recognizer.py
app/app/schemas/: ocr.py
app/app/service/: layer.py
app/config/: logger.py
app/deepdoc/parser/: __init__.py  image_parser.py  pdf_parser.py  ppt_parser.py
app/deepdoc/rag/app/: laws.py  manual.py  naive.py  picture.py
app/deepdoc/rag/nlp/: __init__.py  rag_tokenizer.py
app/deepdoc/vision/: layout_recognizer.py  ocr.py  recognizer.py  t_ocr.py  t_recognizer.py  table_structure_recognizer.py
app/routers/: ocr.py
app/schemas/: ocr.py
app/service/: factory.py  layer.py
app/utils/: file_utils.py  singal.py
demos/: ocr_demo.ipynb  tensor.py
logs/: ocr.log.2024-06-14  ocr.log.2024-06-17  ocr.log.2024-06-18
res/deepdoc/: layout.onnx  tsr.onnx
