[tool.poetry]
name = "sailvan-ocr"
version = "0.1.0"
description = "sailvan ocr module"
authors = ["gaohuansheng"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
python-docx = "^1.1.2"
opencv-python = "^4.10.0.82"
pdfplumber = "^0.11.0"
datrie = "^0.8.2"
nltk = "^3.8.1"
hanziconv = "^0.3.2"
concurrent-log = "^1.0.1"
fastapi = "^0.111.0"
xgboost = "^2.0.3"
pypdf2 = "^3.0.1"
shapely = "^2.0.4"
pyclipper = "^1.3.0.post5"
onnxruntime = "^1.18.0"
demjson3 = "^3.0.6"
xpinyin = "^0.7.6"
torch = "^2.3.1"
tiktoken = "^0.7.0"
openpyxl = "^3.1.4"
python-pptx = "^0.6.23"


[tool.poetry.group.dev.dependencies]
easyocr = "^1.7.1"
jupyterlab = "^4.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
